--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "babel-runtime": "^6.26.0",
     "baguettebox.js": "^1.11.0",
     "dotenv-webpack": "^1.7.0",
+    "es6-promise": "^4.2.6",
     "fuzzysort": "^1.1.4",
     "ghost-email-service": "^1.2.0",
     "ghost-pagination": "^0.1.3",
@@ -86,8 +87,8 @@
     "graphql-request": "^1.8.2",
     "graphql-tag": "^2.10.1",
     "highlight.js": "^9.15.6",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
-    "node-fetch": "^2.3.0",
     "paginate": "^0.2.0",
     "scrollbooster": "^1.1.0",
     "slick-carousel": "^1.8.1"
