--- a/package.json
+++ b/package.json
@@ -88,10 +88,10 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.0",
+    "@babel/core": "^7.4.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-env": "^7.4.3",
     "babel-loader": "^8.0.5",
     "css-declaration-sorter": "4.0.1",
     "css-loader": "^2.1.1",
@@ -104,8 +104,8 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "webpack": "^4.29.6",
+    "terser-webpack-plugin": "^1.2.3",
+    "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
   },
   "babel": {
