--- a/package.json
+++ b/package.json
@@ -63,9 +63,9 @@
     }
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.0",
-    "@babel/runtime": "^7.4.2",
-    "@babel/runtime-corejs2": "^7.4.2",
+    "@babel/polyfill": "^7.4.3",
+    "@babel/runtime": "^7.4.3",
+    "@babel/runtime-corejs2": "^7.4.3",
     "@sendgrid/mail": "^6.3.1",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
@@ -82,7 +82,8 @@
     "graphql-tag": "^2.10.1",
     "highlight.js": "^9.15.6",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.0",
+    "node-fetch": "^2.3.0",
     "paginate": "^0.2.0",
     "scrollbooster": "^1.1.0",
     "slick-carousel": "^1.8.1"
@@ -90,7 +91,7 @@
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.0",
+    "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "babel-loader": "^8.0.5",
     "css-declaration-sorter": "4.0.1",
@@ -102,7 +103,7 @@
     "html-minifier-webpack-plugin": "^2.0.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.5.0",
+    "mini-css-extract-plugin": "^0.6.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
     "webpack": "^4.30.0",
