--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "graphql-request": "^1.8.2",
     "graphql-tag": "^2.10.1",
     "highlight.js": "^9.15.6",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.4.1",
     "mongodb-stitch-browser-sdk": "^4.3.2",
     "paginate": "^0.2.0",
