--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "highlight.js": "^9.15.8",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.4.1",
+    "npm-check-updates": "^3.1.10",
     "paginate": "^0.2.0",
     "scrollbooster": "^1.1.0",
     "slick-carousel": "^1.8.1"
@@ -94,7 +95,7 @@
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
-    "file-loader": "^3.0.1",
+    "file-loader": "^4.0.0",
     "font-config-webpack-plugin": "^1.3.1",
     "html-minifier-webpack-plugin": "^2.0.1",
     "less": "^3.9.0",
@@ -102,7 +103,7 @@
     "mini-css-extract-plugin": "^0.7.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
-    "webpack": "^4.32.2",
+    "webpack": "^4.33.0",
     "webpack-cli": "^3.3.2"
   },
   "babel": {
