--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "highlight.js": "^9.15.8",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.4.1",
+    "lazysizes": "^5.1.0",
     "npm-check-updates": "^3.1.12",
     "paginate": "^0.2.0",
     "scrollbooster": "^1.1.0",
