--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.5"
+    "webpack-cli": "^3.3.5",
+    "lodash": ">=4.17.13"
   },
   "babel": {
     "presets": [
