--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.10.1",
-    "@babel/runtime": "^7.10.1",
-    "@sendgrid/mail": "^7.1.1",
+    "@babel/runtime": "^7.10.3",
+    "@sendgrid/mail": "^7.2.0",
     "babel-register": "^6.26.0",
     "baguettebox.js": "^1.11.1",
     "dotenv-webpack": "^1.8.0",
@@ -75,36 +75,37 @@
     "ghost-pagination": "^0.1.3",
     "ghost-search": "^1.1.0",
     "github-profile-card": "^3.1.0",
-    "highlight.js": "^10.0.3",
+    "highlight.js": "^10.1.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.5.1",
     "lazysizes": "^5.2.2",
-    "scrollbooster": "^2.3.0",
+    "scrollbooster": "^3.0.2",
     "slick-carousel": "^1.8.1",
     "vanilla-lazyload": "^16.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.1",
+    "@babel/core": "^7.10.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.10.1",
-    "@babel/preset-env": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
     "babel-loader": "^8.1.0",
     "css-declaration-sorter": "5.1.2",
-    "css-loader": "^3.5.3",
-    "eslint": "^7.1.0",
+    "css-loader": "^3.6.0",
+    "eslint": "^7.3.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^6.0.0",
     "font-config-webpack-plugin": "^2.0.0",
     "html-minifier-webpack-plugin": "^2.2.3",
-    "less": "^3.11.1",
-    "less-loader": "^6.1.0",
+    "less": "^3.11.3",
+    "less-loader": "^6.1.2",
     "lodash": ">=4.17.15",
     "mini-css-extract-plugin": "^0.9.0",
     "style-loader": "^1.2.1",
-    "stylelint": "^13.5.0",
-    "terser-webpack-plugin": "^3.0.2",
+    "stylelint": "^13.6.1",
+    "terser-webpack-plugin": "^3.0.6",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.12"
   },
   "babel": {
     "presets": [
